# appcc

./: .gitignore  .markdownlink.json  .mergify.yml  .pre-commit-config.yaml  Dockerfile  README.md  SUMMARY.md  book.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/features/taplo:1/: devcontainer-feature.json  install.sh
.devcontainer/features/uv:1/: devcontainer-feature.json  install.sh
.github/: dependabot.yml
.github/workflows/: actions.yml  build.yml  containers.yml  docker.yml  docs.yml  gh-pages.yml  rebase.yml  release.yml
anexos/: incidencias.md  manipuladores.md  proveedores.md  recetario.md
docs/: ChangeLog.md  index.md
docs/anexos/: covid.md  incidencias.md  productos.md  proveedores.md  recetario.md
docs/appcc/: mkdocs.yml
docs/appcc/src/: ChangeLog.md  index.md
docs/appcc/src/anexos/: covid.md  incidencias.md  manipuladores.md  productos.md  proveedores.md  recetario.md
docs/appcc/src/css/: extra.css
docs/appcc/src/intro/: descripcion.md  generalidades.md  index.md  legislacion.md
docs/appcc/src/overrides/: toc.html
docs/appcc/src/planes/: agua.md  formacion.md  limpieza.md  mantenimiento.md  plagas.md  proveedores.md  residuos.md  trazabilidad.md
docs/css/: pdf-print.css
docs/intro/: descripcion.md  generalidades.md  index.md  legislacion.md
docs/planes/: agua.md  covid19.md  formacion.md  limpieza.md  mantenimiento.md  plagas.md  proveedores.md  residuos.md  trazabilidad.md
intro/: README.md  definicion.md  descripcion.md  generalidades.md  legislacion.md
planes/: agua.md  formacion.md  limpieza.md  mantenimiento.md  plagas.md  proveedores.md  residuos.md  trazabilidad.md
